# MonochromePainter

./: .gitignore  00Test.json  CMakeLists.txt  README.md  build-image.py  build_stages.sh  mapGenerator.cpp  windows-build.sh
RawLevel/: 00Test.json  Stage_01.json  Stage_02.json  Stage_03.json  Stage_04.json  Stage_05.json  Stage_06.json  Stage_07.json  Stage_08.json  Stage_09.json  Stage_10.json  Stage_11.json  Stage_12.json  Stage_13.json  Stage_14.json  Stage_15.json  Stage_16.json  Stage_17.json  Stage_18.json  Stage_19.json  Stage_20.json  Stage_21.json  Stage_22.json  Stage_23.json  Stage_24.json  Stage_25.json  Stage_26.json  Stage_27.json  Stage_28.json  Stage_29.json  Stage_30.json  Stage_99.json
include/: assets.h  door.hpp  dynamic_ground.hpp  game.hpp  item.hpp  menu.hpp  monster.hpp  npc.hpp  object.hpp  player.hpp  stage.hpp  steam.hpp
sounds/: test.c
src/: assets.cpp  door.cpp  dynamic_ground.cpp  game.cpp  item.cpp  main.cpp  menu.cpp  monster.cpp  npc.cpp  object.cpp  player.cpp  stage.cpp  steam.cpp
